Remove condition to check github event name

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -87,8 +87,7 @@ jobs:
             TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
             VerboseOutput="${{ github.event.inputs.VerboseOutput }}"
             AnsibleForks="${{ github.event.inputs.AnsibleForks }}"
-          elif [[ "${{ github.event_name }}" == "schedule" ]]
-          then
+          else
             TargetEnvironment="${{ inputs.TargetEnvironment }}"
             VerboseOutput=""
             AnsibleForks=""
