Use ansible var for oem sysman password

--- a/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
@@ -34,7 +34,7 @@
         RM=$({{ emcli }} sync 2>&1)
         if [[ "$RM" == "Error: Session expired. Run emcli login to establish a session." ]];
         then
-            {{ emcli }} login -username=sysman -password=${SYSMAN_PWD}
+            {{ emcli }} login -username=sysman -password={{ oem_sysman_password }}
         fi
         {{ emcli }} set_target_property_value -property_records="{{ get_agent_host.stdout }}:host:Comment:{{ exclude_comment }}"
       register: updatecomment
@@ -71,7 +71,7 @@
         RM=$({{ emcli }} sync 2>&1)
         if [[ "$RM" == "Error: Session expired. Run emcli login to establish a session." ]];
         then
-            {{ emcli }} login -username=sysman -password=${SYSMAN_PWD}
+            {{ emcli }} login -username=sysman -password={{ oem_sysman_password }}
         fi
         {{ emcli }} set_target_property_value -property_records="{{ get_agent_host.stdout }}:host:Comment:"
       register: updatecomment
