Revised version to use ACM

--- a/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/tasks/configure_listener.yml
+++ b/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/tasks/configure_listener.yml
@@ -69,7 +69,7 @@
          (SOURCE =
             (METHOD = FILE)
             (METHOD_DATA =
-                 (DIRECTORY = {{ wallet_directory }})
+                 (DIRECTORY = {{ listener_wallet_directory }})
             )
           )
       SSL_CLIENT_AUTHENTICATION = FALSE
