--- a/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/vars/main.yml
+++ b/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/vars/main.yml
@@ -1,11 +1,9 @@
-wallet_directory: /u01/app/oracle/wallets/ssl_wallet
+listener_wallet_directory: /u01/app/oracle/wallets/ssl_wallet
+client_wallet_directory: /u01/app/oracle/wallets/ssl_client_wallet
 wallet_working_directory: /u01/app/oracle/wallets/working
+controller_working_directory: /tmp/controller_working
 database_type: "{{ group_names | select('match','.*_(primary|standby)db([12]?)') | list | first | regex_replace('^(.*)_(primary|standby)db([12]?)', '\\1') }}"
 ssl_version: "1.2"
-private_key: "{{ region }}-{{ environment_name }}-oracle-self-signed-private-key"
-crt_subject: "/C=GB/ST=England/L=London/O=MinistryOfJustice/OU=HMPPS/CN=justice.gov.uk"
-self_signed_ca_csr: "{{ region }}-{{ environment_name }}-oracle-self-signed-ca-csr"
-self_signed_ca_crt: "{{ region }}-{{ environment_name }}-oracle-self-signed-ca-crt"
 db_secretsmanager_passwords:
   db:
     secret: "{{ environment_name }}-oracle-db-dba-passwords"
