--- a/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/tasks/configure_client_wallet.yml
+++ b/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/tasks/configure_client_wallet.yml
@@ -69,7 +69,7 @@
     - name: Find Standby Host Leaf Certificate(s) on the Ansible Controller
       find:
          paths: "{{ controller_working_directory }}"
-         patterns: "certificate_*.log"
+         patterns: "certificate_*.pem"
       register: leaf_pem_files
       delegate_to: localhost
       become: no
