--- a/.github/workflows/oracle-db-ssl-wallet.yml
+++ b/.github/workflows/oracle-db-ssl-wallet.yml
@@ -24,7 +24,7 @@ on:
         type: choice
         options: 
           - "delius_dbs"
-      VerboseOutput: 
+      Verbose: 
         description: "Verbose Output level"
         type: choice
         options:
@@ -115,4 +115,4 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-          -e target_hosts=${{ steps.prepareinventorynames.outputs.hosts }}  ${{ github.event.inputs.Verbose }}
+          -e target_hosts=${{ steps.prepareinventorynames.outputs.hosts }} ${{ github.event.inputs.Verbose }}
