--- a/playbooks/oem_blackout/oem-blackout/tasks/reevaluate_database_metrics.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/reevaluate_database_metrics.yml
@@ -7,16 +7,16 @@
     - name: Check if Metric Exists
       shell: |
         . ~/.bash_profile
-        {{ emctl_agent }} status agent scheduler | grep oracle_database:${ORACLE_SID} | awk -F: '{print $NF}'
+        {{ emctl_agent }} status agent scheduler | grep oracle_database | awk -F: '{printf("%s:%s\n", $(NF-1), $NF)}'
       register: get_metric_exists
       changed_when: false
 
-    - name: Set Metric Exists
+    - name: Set Metric List
       set_fact:
-        metric_exists: "{{ get_metric_exists.stdout_lines | select('match','^' + metric_name) | list | length > 0 }}"
+        metric_list: "{{ get_metric_exists.stdout_lines | select('search', '^.*:' + metric_name + '$') }}"
 
     - name: Run Collection for Metric
       shell: |
         . ~/.bash_profile
-        {{ emctl_agent }} control agent runCollection ${ORACLE_SID}:oracle_database {{ metric_name }}
-      when: metric_exists | bool
+        {{ emctl_agent }} control agent runCollection {{ item.split(':')[0] }}:oracle_database {{ metric_name }}
+      loop: "{{ metric_list }}"
