--- a/playbooks/oracle_support_awr_reports/awr_reports_setup/tasks/main.yml
+++ b/playbooks/oracle_support_awr_reports/awr_reports_setup/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Get database role
-  script: get_database_role.sh
+  script: ../../../../common/files/get_database_role.sh
   register: db_role
 
 - name: Set facts adg
