--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -147,7 +147,7 @@
 
     - name: Set Database Role
       set_fact:
-        database_role: "{{ getdatabaserole.stdout_lines[-1] }}"
+        database_role: "{{ getdatabaserole.stdout | trim }}"
 
     # Do not attempt to create restore points on snapshot standby database.   These are normally used to support
     # Read Only access, so data will be expected to have diverged from the primary database.
