--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -431,14 +431,15 @@ jobs:
           # the inventory is dynamic, so if the host is down then it will not appear in the inventory.
           # This allows the primary job to run on the standby if needed (so this is a different type
           # of failure to running it on the primary and getting an RMAN error, i.e. it doesn't run at all,
-          # but we just want to do the same thing, namely re-try on standby).
+          # but we just want to do the same thing, which is to re-try on standby).
           if [[ $(ansible-inventory -i $inventory --list | grep -c $RmanTarget) -eq 0 ]]; then
              echo "Target does not appear in the inventory"
              BackupStatus="failed"
              if [[ "${BackupStandbyOnPrimaryFailure:-yes}" == "yes" ]]; then
                         # Determine what standby to use - subsequent steps will confirm its existence
-                        RmanTarget=$(echo $RmanTarget | sed 's/standbydb1/standbydb2/')
-                        RmanTarget=$(echo $RmanTarget | sed 's/primarydb/standbydb1/')
+                        Inputs=$(echo $Inputs | jq '.RmanTarget |= gsub("standbydb1"; "standbydb2")')
+                        Inputs=$(echo $Inputs | jq '.RmanTarget |= gsub("primarydb"; "standbydb1")')
+                        RmanTarget=$(echo Inputs | jq -r '.RmanTarget')
                         echo "Changing Target to $RmanTarget"
              fi
           fi
