--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -439,7 +439,7 @@ jobs:
                         # Determine what standby to use - subsequent steps will confirm its existence
                         Inputs=$(echo $Inputs | jq '.RmanTarget |= gsub("standbydb1"; "standbydb2")')
                         Inputs=$(echo $Inputs | jq '.RmanTarget |= gsub("primarydb"; "standbydb1")')
-                        RmanTarget=$(echo $Inputs | jq -r '.RmanTarget')
+                        RmanTarget=$(echo "$Inputs" | jq -r | jq -r '.RmanTarget')
                         echo "Changing Target to $RmanTarget"
              fi
           fi
