--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -437,13 +437,10 @@ jobs:
              BackupStatus="failed"
              if [[ "${BackupStandbyOnPrimaryFailure:-yes}" == "yes" ]]; then
                         # Determine what standby to use - subsequent steps will confirm its existence
-                        echo "I1 $Inputs"
                         Inputs=$(echo $Inputs | jq -r | jq '.RmanTarget |= gsub("standbydb1"; "standbydb2")')
-                        echo "I2 $Inputs"
                         Inputs=$(echo $Inputs | jq -r | jq '.RmanTarget |= gsub("primarydb"; "standbydb1")')
-                        echo "I3 $Inputs"
                         RmanTarget=$(echo "$Inputs" | jq -r | jq -r '.RmanTarget')
-                        echo "Changing Target to $RmanTarget"
+                        SSMParameter="/oracle-backups/$RmanTarget"
              fi
           fi
           if [[ "$RmanTarget" =~ "standbydb1" ]]; then
