--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -438,8 +438,8 @@ jobs:
              if [[ "${BackupStandbyOnPrimaryFailure:-yes}" == "yes" ]]; then
                         echo "I1: $Inputs"
                         # Determine what standby to use - subsequent steps will confirm its existence
-                        Inputs=$(echo $Inputs | jq -r | jq '.RmanTarget |= gsub("standbydb1"; "standbydb2")')
-                        Inputs=$(echo $Inputs | jq -r | jq '.RmanTarget |= gsub("primarydb"; "standbydb1")')
+                        Inputs=$(echo $Inputs | jq -r | jq '.RmanTarget |= gsub("standbydb1"; "standbydb2")' | sed 's/"/\\"/g')
+                        Inputs=$(echo $Inputs | jq -r | jq '.RmanTarget |= gsub("primarydb"; "standbydb1")' | sed 's/"/\\"/g')
                         RmanTarget=$(echo "$Inputs" | jq -r | jq -r '.RmanTarget')
                         SSMParameter="/oracle-backups/$RmanTarget"
                         echo "I2: $Inputs"
