--- a/playbooks/audit_management/playbook.yml
+++ b/playbooks/audit_management/playbook.yml
@@ -15,7 +15,10 @@
 
     - name: Set Database Role
       set_fact:
-        database_role: "{{ getdatabaserole.stdout_lines[-1] }}"
+        database_role: "{{ getdatabaserole.stdout | trim }}"
+
+    - debug:
+        msg: "Database Role is {{ database_role }}"
 
     - name: Check Unified Audit Management is enabled
       script: get_unified_auditing.sh
