--- a/playbooks/oem_blackout/oem-blackout/tasks/reevaluate_database_metrics.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/reevaluate_database_metrics.yml
@@ -4,19 +4,21 @@
 # in the current state before that exclusion is removed.
 - name: Re-evaluate Database Metric {{ metric_name }}
   block:
-    - name: Check if Metric Exists
+    - name: Check if Database Metric Exists
       shell: |
         . ~/.bash_profile
         {{ emctl_agent }} status agent scheduler | grep oracle_database | awk -F: '{printf("%s:%s\n", $(NF-1), $NF)}'
-      register: get_metric_exists
+      register: get_database_metric_exists
       changed_when: false
 
-    - name: Set Metric List
+    - name: Set Database Metric List
       set_fact:
-        metric_list: "{{ get_metric_exists.stdout_lines | select('search', '^.*:' + metric_name + '$') }}"
+        database_metric_list: "{{ get_database_metric_exists.stdout_lines | select('search', '^.*:' + metric_name + '$') }}"
 
     - name: Run Collection for Metric
       shell: |
         . ~/.bash_profile
-        {{ emctl_agent }} control agent runCollection {{ item.split(':')[0] }}:oracle_database {{ metric_name }}
-      loop: "{{ metric_list }}"
+        {{ emctl_agent }} control agent runCollection {{ database_metric_name.split(':')[0] }}:oracle_database {{ metric_name }}
+      loop: "{{ database_metric_list }}"
+      loop_control:
+        loop_var: database_metric_name
